# slang-rhi

./: .clang-format  .coderabbit.yaml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  TODO  YONGQUESTIONS.txt  captureplan.md  launch.json  metal-features.md  plan-hardening.md  plan-parallel-pipeline-creation.md  plan-stress-tests.md
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/prompts/: debug-layer-phase1-device.prompt.md  debug-layer-phase2-commandEncoder.prompt.md  debug-layer-phase3-renderPassEncoder.prompt.md  debug-layer-phase4-computePassEncoder.prompt.md  debug-layer-phase5-rayTracingPassEncoder.prompt.md  debug-layer-phase6-heap.prompt.md  plan-debugLayerValidation.prompt.md  plan-standardizeDebugLayerMessages.prompt.md
.github/workflows/: checks.yml  ci-gcp.yml  ci.yml  claude.yml  pre-commit.yml
.reuse/: dep5
benchmarks/benchmark-compile/: README.md  main.cpp  synthetic-modules.cpp  synthetic-modules.h  thread-pool.cpp  thread-pool.h
cmake/: DetermineTargetArchitecture.cmake  FetchPackage.cmake  FindOptiX.cmake
docs/: api-thread-safe.md  api.md  error-handling.md  synthetic-bindings.md
examples/base/: camera.h  example-base.h  linalg.h  utils.h
examples/path-tracer/: accumulator.slang  example-path-tracer.cpp  path-tracer.slang  tone-mapper.slang
examples/shader-toy/: circle.slang  example-shader-toy.cpp  ocean.slang  shader-toy.slang
examples/surface/: example-surface.cpp
examples/triangle/: example-triangle.cpp  triangle.slang
examples/wasm/: index.html  wasm-test.cpp
include/: slang-rhi-config.h.in  slang-rhi-device.h  slang-rhi.h  slang-user-config.h
include/slang-rhi/: acceleration-structure-utils.h  agility-sdk.h  capabilities.h  cluster_accel_abi_host.h  cluster_accel_args.h  cluster_accel_args.slangh  cluster_accel_args_host.h  cuda-driver-api.h  glfw.h  optix-api.h  optix-denoiser.h  optix9-api.hpp  ray-tracing-motion.slang  shader-cursor.h  slang-include.h  synthetic-bindings.h
plans/: hardening-ai-review.md  hardening-ci.md  hardening-d3d12-shader-cache.md  hardening-diagnostics.md  hardening-task-pool-concurrency.md  hardening-vulkan-descriptor-pressure.md
shaders/cluster_accel/: cluster_accel_abi.common.inc  cluster_accel_abi.slang
src/: aftermath.cpp  aftermath.h  backend.h  buffer-pool.h  cocoa-util.h  cocoa-util.mm  command-buffer.cpp  command-buffer.h  command-encoder-com-forward.h  command-list.cpp  command-list.h  command-writer.h  cooperative-vector-utils.h  core.natvis  cuda-driver-api.cpp  device-child.cpp  device-child.h  device.cpp  device.h  dump-reflection.cpp  dump-reflection.h  enum-strings.cpp  enum-strings.h  enum-utils.cpp  enum-utils.h  flag-combiner.cpp  flag-combiner.h  format-conversion.cpp  format-conversion.h  graphics-heap.cpp  graphics-heap.h  heap.cpp  heap.h  immediate-device.cpp  immediate-device.h  immediate-renderer-base.cpp  immediate-renderer-base.h  mutable-shader-object.h  pass-encoder-com-forward.h  pipeline.cpp  (+27 more)
src/core/: arena-allocator.h  assert.cpp  assert.h  blob.cpp  blob.h  block-allocator.h  com-object.h  common.h  crc32.cpp  crc32.h  deferred.h  diagnostics.cpp  diagnostics.h  offset-allocator.cpp  offset-allocator.h  paged-allocator.h  platform.cpp  platform.h  reverse-map.h  ring-queue.h  sha1.cpp  sha1.h  short_vector.h  slang-blob.h  slang-crypto.cpp  slang-crypto.h  slang-dictionary.h  slang-file-system.cpp  slang-file-system.h  slang-hash.h  slang-io.cpp  slang-memory-file-system.cpp  slang-persistent-cache.cpp  slang-persistent-cache.h  slang-render-api-util.cpp  slang-render-api-util.h  slang-stream.cpp  slang-win-process.cpp  smart-pointer.cpp  smart-pointer.h  (+12 more)
src/cpu/: cpu-backend.cpp  cpu-backend.h  cpu-base.h  cpu-buffer.cpp  cpu-buffer.h  cpu-command.cpp  cpu-command.h  cpu-device.cpp  cpu-device.h  cpu-fence.cpp  cpu-fence.h  cpu-helper-functions.cpp  cpu-helper-functions.h  cpu-pipeline-state.cpp  cpu-pipeline-state.h  (+16 more)
tests/: cluster_accel_abi.common.inc  cluster_accel_abi.slang  cluster_accel_abi_host.h  doctest-reporter.h  main.cpp  memory-report.cpp  memory-report.h  shader-cache.h  shader-cursor.cpp  shader-cursor.h  test-acceleration-structure-creation-with-validation.cpp  test-acceleration-structure.cpp  test-aftermath-tdr.slang  test-aftermath.cpp  test-arena-allocator.cpp  test-atomic-bfloat16.cpp  test-benchmark-command.cpp  test-benchmark-command.slang  test-bind-pointers.cpp  test-bindless-buffers.slang  test-bindless-combined-texture-samplers.slang  test-bindless-descriptor-handles.cpp  test-bindless-descriptor-handles.slang  test-bindless-textures.slang  test-bindless.cpp  test-blob.cpp  test-block-allocator.cpp  test-buffer-barrier.cpp  test-buffer-barrier.slang  test-buffer-copy.slang  test-buffer-from-handle.cpp  test-buffer-shared.cpp  test-caching-allocator.cpp  test-clear-texture.cpp  test-cmd-clear-buffer.cpp  test-cmd-clear-texture.cpp  test-cmd-copy-buffer-to-texture.cpp  test-cmd-copy-buffer.cpp  test-cmd-copy-texture-to-buffer.cpp  test-cmd-copy-texture.cpp  (+157 more)
tests-old/: get-buffer-resource-handle-test.cpp  get-cmd-buffer-handle-test.cpp  get-cmd-queue-handle-test.cpp  get-supported-resource-states-test.cpp  get-texture-resource-handle-test.cpp  gfx-test-texture-util.cpp  gfx-test-texture-util.h  gfx-test-util.cpp  gfx-test-util.h  instanced-draw-tests.cpp  link-time-default.cpp  link-time-options.cpp  link-time-type.cpp  mutable-shader-object.cpp  nested-parameter-block.cpp  precompiled-module-2.cpp  precompiled-module-cache.cpp  precompiled-module.cpp  resolve-resource-tests.cpp  root-mutable-shader-object.cpp  root-shader-parameter.cpp  sampler-array.cpp  shader-cache-tests.cpp  shared-textures-tests.cpp  swap-chain-resize-test.cpp  uint16-structured-buffer.cpp
tools/: asan-suppressions.txt  check_ascii_hook.py  extract-webgpu-procs.py  filter-lsan-reports.py  generate-uuid.py  lsan-suppressions.txt  nsystests.bat.ln  setup-sanitizer-env.py
(+697 files in other folders)
